<resources>
    <string name="app_name">Cell Finder</string>
    <string name="shake_toolbar">Shake</string>

    <string name="authenticate_text_message">Enter Pin</string>
    <string name="authenticate_button">OK </string>

    <string name="title_activity_main_page">MainPage</string>
    <string name="edit_info_button_main_page">Edit info</string>

    <string name="title_activity_add_info_page">AddInfoPage</string>
    <string name="add_name">Name:</string>
    <string name="add_number">Number to Send message: </string>
    <string name="add_email">Email Id to send message</string>
    <string name="okButton">OK</string>
    <string name="title_activity_splash">Splash</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="title_activity_email_authenticate">EmailAuthenticate</string>
    <string name="enter_email_authentication">Email id</string>
    <string name="password_text">Password</string>
    <string name="email_authenticate_title">Enter your stored email id and password</string>
    <string name="main_page_title">Your Info</string>
</resources>
